--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body{
 
    #registration_space{
      position:fixed;
-     top:0;
+     top:-100%;
      left:0;
      width:100vw;
      height:100vh;
